from first release, but nonessential bugfixes and feature development happen
will be made on the development trunk and appear in the next quarterly release.

Those wishing to use the latest code instead of a branch release can obtain
it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

== Configuration changes ==

== Major new features ==

== Changes since 1.9 ==

* (bug 7292) Fix site statistics when moving pages in/out of content namespaces
* (bug 6937) Introduce "statistics-footer" message, appended to Special:Statistics
* (bug 8531) Correct local name of Lingála (patch by Raymond)
* (bug 6638) List block flags in block log entries
* New script maintenance/language/checkExtensioni18n.php used to check i18n
  progress in the extension repository.
* Running maintenance/parserTests.php with '--record' option, will now automaticly
  tries to create its database tables.
* Made the PLURAL: parser function return singular on -1 per default.
* Fixed up the AjaxSearch
* (bugs 5051, 5376) Tooltips and accesskeys no longer require JavaScript
* Added SkinTemplateOutputPageBeforeExec hook before SkinTemplate::outputPage()
  starts page output (http://lists.wikimedia.org/pipermail/wikitech-l/2007-January/028554.html)
* Fix SpecialVersion->formatCredits input. Version and Url parameters should be null
  to be treated properly with isset.
* Branch page_restrictions column out into its own table, also creating a "cascading protection"
   feature, which automagically disallows edits to pages transcluded into a page protected with
   this new option. Various other code tidiness fixes and refactoring in the log messages of
   branches/werdna/restrictions-separation.
* The minimum permissions needed to edit a page in each namespace can
  now be customized via the $wgNamespaceProtection array.  By default,
  editing pages in the MediaWiki namespace requires "editinterface"
  permissions, just as before.